Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
 <p>1) Investor who prefer to access Lending Club programmatically</p>
 
-<p>2) Sophisticated scientist and engineers who wish to implement data driven investment strategies</p>
+<p>2) Scientist and engineers who wish to implement data driven investment strategies</p>
 
-<p>In serving the second group, lending_club_ml.model_lib provides a framework for implementing custom order recommenders.</p>
+<p>The first group will find everything the need in the LendingClubConnection class. In serving the second group, lending_club_ml.model_lib provides a framework for implementing custom order recommenders.</p>
 
 <p>Contributions are welcome!</p>
 
